# person-detection

./: CMakeLists.txt  LICENSE  README.md  boxes.txt
cuda_lib/: CMakeLists.txt
cuda_lib/src/: kernel.cu
include/: kernel.h  rfbnet.h
src/: main.cpp  rbfnet.cpp
